refactor: minor changes to endpoint tags
